[front] add block-list Bulma extension

--- a/frontend/src/assets/main.scss
+++ b/frontend/src/assets/main.scss
@@ -51,4 +51,5 @@ $navbar-item-hover-color: $red-dark;
 
 // Bulma Import
 @import "./node_modules/bulma/bulma";
+@import "./node_modules/bulma-block-list/src/block-list";
 
