add bulma-pageloader to dependencies

--- a/frontend/src/assets/main.scss
+++ b/frontend/src/assets/main.scss
@@ -52,4 +52,4 @@ $navbar-item-hover-color: $red-dark;
 // Bulma Import
 @import "./node_modules/bulma/bulma";
 @import "./node_modules/bulma-block-list/src/block-list";
-
+@import "./node_modules/bulma-pageloader/src/sass/index";
